add flags  indicate the purpose of the python code

--- a/example2/klipper_config_files/EXTENDED_TEMPLATE.cfg
+++ b/example2/klipper_config_files/EXTENDED_TEMPLATE.cfg
@@ -8,3 +8,5 @@
 [extended_template]
 # Extended_template is used to define the path to your Function Config
 path: /home/pi/klipper_config/ACTIVE/CONFIG/KLIPPER_FUNCTIONS/function_config.yaml
+jinja2_function: True
+jinja2_filter: True 
