--- a/example2/TEST_CALL_PARK.cfg
+++ b/example2/TEST_CALL_PARK.cfg
@@ -27,26 +27,26 @@
 description: Helper: Park head depending on variable DICT parameter which is a python dictionary variable 
 gcode:
    _general_Debug msg="TEST_CALL_PARK - entering"
-    {% set dict_string = {"x": 150.0, "y": 20.0, "z": 50.0, "f": 4000.0} %}
+    {% set dict_string = '{"x": 150.0, "y": 20.0, "z": 50.0, "f": 4000.0}' %}
     PARK_DICT DICT='{dict_string}'
 
-    PARK_DICT DICT='{"x": 250, "y": 50, "z": 70, "f": 4000.0}'
+    PARK_DICT DICT='{{"x": 250, "y": 50, "z": 70, "f": 4000.0}}'
     
-    {% set dict_string = {'x': 150.0, 'y': 20.0, 'z': 50.0, 'f': 4000.0} %}
+    {% set dict_string = "{'x': 150.0, 'y': 20.0, 'z': 50.0, 'f': 4000.0}" %}
     PARK_DICT DICT="{dict_string}"
 
-    PARK_DICT DICT="{'x': 250, 'y': 50, 'z': 70, 'f': 4000.0}"
+    PARK_DICT DICT="{{'x': 250, 'y': 50, 'z': 70, 'f': 4000.0}}"
     
 #==================
 
-    {% set dict_string = {"x": 150.0, "y": 20.0, "z": 50.0, "f": 4000.0} %}
+    {% set dict_string = '{"x": 150.0, "y": 20.0, "z": 50.0, "f": 4000.0}' %}
     PARK_DICT LIT='{dict_string}'
 
-    PARK_DICT LIT='{"x": 250, "y": 50, "z": 70, "f": 4000.0}'   
+    PARK_DICT LIT='{{"x": 250, "y": 50, "z": 70, "f": 4000.0}}'   
     
-    {% set dict_string = {'x': 150.0, 'y': 20.0, 'z': 50.0, 'f': 4000.0} %}
+    {% set dict_string = "{'x': 150.0, 'y': 20.0, 'z': 50.0, 'f': 4000.0}" %}
     PARK_DICT LIT="{dict_string}"
 
-    PARK_DICT LIT="{'x': 250, 'y': 50, 'z': 70, 'f': 4000.0}"    
+    PARK_DICT LIT="{{'x': 250, 'y': 50, 'z': 70, 'f': 4000.0}}"    
    _general_Debug msg="TEST_CALL_PARK - exiting"
  
